[tool.poetry]
name = "find-cheap-car"
version = "0.1.0"
description = ""
authors = ["Ahmed Asadov <zoxon470@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
faust = "^1.10.4"
orjson = "^3.5.2"
httpx = "^0.18.1"
fastapi = "^0.65.1"
parsel = "^1.6.0"
websocket-client = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
